chapter5/ex06/results/task1.txt

Status: FAILED!
Reason: Unable to run main.py
Error:   File "/home/runner/work/9780357421796_python-fundamentals-1e-90d64395-38b0-4952-862a-0c8397e7ddb5/9780357421796_python-fundamentals-1e-90d64395-38b0-4952-862a-0c8397e7ddb5/python/chapter5/ex06/main.py", line 11
    else:
    ^^^^
SyntaxError: invalid syntax

Timestamp: 2024-10-31 00:54:51.078918

Status: FAILED!
Reason: Unable to run main.py
Error:   File "/home/runner/work/9780357421796_python-fundamentals-1e-90d64395-38b0-4952-862a-0c8397e7ddb5/9780357421796_python-fundamentals-1e-90d64395-38b0-4952-862a-0c8397e7ddb5/python/chapter5/ex06/main.py", line 11
    else:
    ^^^^
SyntaxError: invalid syntax

Timestamp: 2024-10-31 00:54:51.079006

Status: FAILED!
Check: 1
Test: 
Reason: 
Error : AssertionError -   File "/home/runner/work/9780357421796_python-fundamentals-1e-90d64395-38b0-4952-862a-0c8397e7ddb5/9780357421796_python-fundamentals-1e-90d64395-38b0-4952-862a-0c8397e7ddb5/python/chapter5/ex06/main.py", line 11
    else:
    ^^^^
SyntaxError: invalid syntax

Timestamp: 2024-10-31 00:54:51.079054

Status: FAILED!
Check: 2
Test: Output is correct 2
Reason: Unable to find 'else:
   print("You are all set with cars.")' in the program.
Error : str - AssertionError
Timestamp: 2024-10-31 00:54:51.079563

Status: FAILED!
Check: 2
Test: 
Reason: 
Error : AssertionError - Failed
Timestamp: 2024-10-31 00:54:51.079607

Status: PASSED!
Check: 3
Test: Declare a variable named `amt` that uses the `len` tuple method
Reason: amt = len(cars)` was found in the program.None
Timestamp: 2024-10-31 00:54:51.079825

Status: PASSED!
Check: 4
Test: Declare a variable named `fav` that uses the `count` tuple method
Reason: fav = cars.count("coupe")` was found in the program.None
Timestamp: 2024-10-31 00:54:51.080091
